network-policy/kubernetes/serviceb-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: serviceb-service
  labels:
    app: serviceb
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: serviceb-port
  selector:
    app: serviceb
  type: NodePort
