network-policy/kubernetes/np-servicea-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: servicea-external-egress
spec:
  podSelector:
    matchLabels:
      app: servicea
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 443
      protocol: TCP
