network-policy/kubernetes/np-serviceb-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: serviceb-external-egress
spec:
  podSelector:
    matchLabels:
      app: serviceb
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    - port: 443
      protocol: TCP
